chore: fix search dialog on mobile

--- a/projects/demo/src/modules/app/search/index.less
+++ b/projects/demo/src/modules/app/search/index.less
@@ -96,3 +96,9 @@ html[data-theme='dark'] {
         color: var(--docsearch-muted-color);
     }
 }
+
+@media @tui-mobile {
+    .DocSearch-Container {
+        position: fixed;
+    }
+}
